--- a/Code-Crusher-project/front-end/css/game.css
+++ b/Code-Crusher-project/front-end/css/game.css
@@ -460,24 +460,24 @@ a {
 /* GTA V */
 .promo-content-box-orange {
     position: absolute;
-    top: 40px; /* top-10 */
+    bottom: 20px; /* top-10 */
     left: 40px; /* left-10 */
-    background-color: #ea580c; /* bg-orange-600 */
+    
     padding: 24px; /* p-6 */
     border-radius: 8px; /* rounded-lg */
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); /* shadow-lg */
 }
 
 .promo-title-gta {
-    font-size: 36px; /* text-4xl */
+    font-size: 48px; /* text-5xl */
     font-weight: 900; /* font-black */
-    color: #ffffff;
+    color: #ffa012; /* text-yellow-300 */
     text-transform: uppercase;
 }
 
 .promo-button-black {
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #ff6f0f;
+    color: #000000;
     font-weight: 700; /* font-bold */
     padding: 12px 32px; /* py-3 px-8 */
     border-radius: 8px; /* rounded-lg */
@@ -487,7 +487,7 @@ a {
 }
 
 .promo-button-black:hover {
-    background-color: #1f2937; /* hover:bg-gray-800 */
+    background-color: #ff7b0f; /* hover:bg-gray-800 */
 }
 
 /* Assassin's Creed */
@@ -502,15 +502,14 @@ a {
 }
 
 .promo-title-ac {
-    font-size: 60px; /* text-6xl */
+    font-size: 48px; /* text-5xl */
     font-weight: 900; /* font-black */
-    color: #ffffff;
-    opacity: 0.9;
+    color: #ad25b9; /* text-yellow-300 */
     text-transform: uppercase;
 }
 
 .promo-button-purple {
-    background-color: #7e22ce; /* bg-purple-700 */
+    background-color: #ab4bff; /* bg-purple-700 */
     color: #ffffff;
     font-weight: 700; /* font-bold */
     padding: 12px 32px; /* py-3 px-8 */
