--- a/customer/css/login.css
+++ b/customer/css/login.css
@@ -66,6 +66,9 @@ main {
     font-size: 1rem;
     box-sizing: border-box; /* paddingを含めて幅を計算 */
     
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     /* 入力中の見た目 */
     transition: border-color 0.3s, box-shadow 0.3s;
 }
